--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <title>CareerFlow – Application Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a2e0c1e6e2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body class="bg-light">
 <div class="container py-5">
@@ -14,8 +15,8 @@
             <h5 class="mb-0">Upload LinkedIn Saved Jobs</h5>
         </div>
         <div class="card-body">
-            <form id="uploadForm" method="post" enctype="multipart/form-data"
-                  data-ajax-target="#jobList">
+            <form id="uploadForm" method="POST" enctype="multipart/form-data" action="/upload-linkedin"
+                    data-ajax-target="#jobList">
                 <div class="input-group">
                     <input type="file" name="file" class="form-control" required />
                     <button type="submit" class="btn btn-primary">
